[gd_scene load_steps=9 format=3 uid="uid://ced0erug2hp3b"]

[ext_resource type="Script" uid="uid://t70sej6w2rk1" path="res://End_Screen.gd" id="1_lmk8k"]
[ext_resource type="Texture2D" uid="uid://csr46qy74xyr0" path="res://Tiles/Assets/Background_2.png" id="2_3w1jx"]
[ext_resource type="FontFile" uid="uid://b6wqb3njobiv7" path="res://AMORIA.otf" id="3_e6a7n"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ee4bf"]
texture = ExtResource("2_3w1jx")
modulate_color = Color(0.577008, 0.577008, 0.577008, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_62e2m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qtu10"]
bg_color = Color(0.535023, 0.535024, 0.535023, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_62e2m"]
bg_color = Color(0.35719, 0.357191, 0.357191, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uchyk"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lmk8k")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ee4bf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -137.5
offset_top = -35.0
offset_right = 137.5
offset_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Button1" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_62e2m")
theme_override_styles/hover = SubResource("StyleBoxFlat_qtu10")
theme_override_styles/pressed = SubResource("StyleBoxFlat_62e2m")
theme_override_styles/normal = SubResource("StyleBoxFlat_uchyk")
text = "Restart Game"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_62e2m")
theme_override_styles/hover = SubResource("StyleBoxFlat_qtu10")
theme_override_styles/pressed = SubResource("StyleBoxFlat_62e2m")
theme_override_styles/normal = SubResource("StyleBoxFlat_uchyk")
text = "Main Menu"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_62e2m")
theme_override_styles/hover = SubResource("StyleBoxFlat_qtu10")
theme_override_styles/pressed = SubResource("StyleBoxFlat_62e2m")
theme_override_styles/normal = SubResource("StyleBoxFlat_uchyk")
text = "Exit Game"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -460.0
offset_top = -244.0
offset_right = 460.0
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("3_e6a7n")
theme_override_font_sizes/font_size = 61
text = "Congratulations!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -460.0
offset_top = -174.0
offset_right = 460.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("3_e6a7n")
theme_override_font_sizes/font_size = 35
text = "You have Ascended"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Button1" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_Main_Menu"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_Exit_pressed"]
